--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-* {
-  scrollbar-width: none;
-}
-
 *::selection {
   background: initial;
 }
